--- a/index.html
+++ b/index.html
@@ -4,11 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee Database</title>
-    <Link rel="stylesheet" href="./style.css"/>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
-    
-    
-    <script src="index.js"></script>
+    <div class="app">
+        <header class="header">
+            <h1>Employee Database Management</h1>
+            <button class="createEmployee">Add Employees</button>
+        </header>
+        <div class="wrapper">
+            <div class="employeeListSection">
+                <p class="title">Employee List</p>
+                <div class="employeeList">
+                </div>
+            </div>
+            <div class="employeeInfoSection">
+                <p class="title">Employee Information</p>
+                <div class="employeeInfo"></div>
+            </div>
+        </div>
+        <div class="addEmployee">
+            <form action="" class="addEmployee__create">
+                <p>Add a new Employee</p>
+                <div>
+                    <input type="text" name="firstName" placeholder="First Name" required/>
+                    <input type="text" name="lastName" placeholder="Last Name" required/>
+                </div>
+                <input type="text" name="imageUrl" placeholder="Image URL (Optional)"/>
+                <input type="email" name="email" placeholder="Email" required>
+                <input type="number" name="contactNumber" placeholder="Contact" required />
+                <input type="number" name="salary" placeholder="Salary" required />
+                <input type="text" name="address" placeholder="Address" required />
+                <input type="date" name="dob" placeholder="Date of Birth" class="addEmployee__create--dob"/>
+                <input type="submit" value="Submit" class="addEmployee__create--submit"/>
+            </form>
+        </div>
+    </div>
+<script src="./index.js"></script>
 </body>
 </html>
